SynProdGITV1/force-app/main/default/objects/UoM_Std_Data__c/UoM_Std_Data__c.object-meta.xml
<CustomObject>
    <label>UoM Std Data</label>
    <nameField>
        <label>Measurement Unit Text</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UoM Std Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>