SynProdGITV1/force-app/main/default/objects/UoM_Std_Data__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>