SynProdGITV1/force-app/main/default/objects/UoM_Std_Data__c/fields/Internal_UoM_Code__c.field-meta.xml
<CustomField>
    <fullName>Internal_UoM_Code__c</fullName>
    <description>Internal UoM Code - will be used for sending and receiving the Order Item UoM for Order Interface</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal UoM Code - will be used for sending and receiving the Order Item UoM for Order Interface</inlineHelpText>
    <label>Internal UoM Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>