SynProdGITV1/force-app/main/default/objects/UoM_Std_Data__c/fields/UOM_Code__c.field-meta.xml
<CustomField>
    <fullName>UOM_Code__c</fullName>
    <description>ISO Code</description>
    <externalId>true</externalId>
    <inlineHelpText>ISO Code - this will be used in Material integration and migration</inlineHelpText>
    <label>UOM Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>