SynProdGITV1/force-app/main/default/objects/UoM_Std_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UOM_Code__c</columns>
    <columns>Dimension__c</columns>
    <columns>Internal_UoM_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>